pxc/tests/test_003_interface/inh_match3.px
namespace inh_match3;
import common -;

interface ifoo {
  function void m(int x) const;
}

struct foo < ifoo > {
  function void m(int mutable& x) const { println("foo"); } // error: passby
}

function void t1() {
  ptr{ifoo} p = make_ptr(foo());
  p->m(10);
}

t1();
